feat(new-deepnotes): e2ee package and page collaboration crypto
